small changes, exec

--- a/bike_sharing_kaggle.ipynb
+++ b/bike_sharing_kaggle.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### Linear Regression\n",
     "Score created from training data without(!) train-test split.\n",
-    "- with and without preprocessing\n",
+    "- with preprocessing and without scaling\n",
     "- with all samples: \n",
     "    - <1 s\n",
     "    - R^2: 0.38403\n",
@@ -23,12 +23,14 @@
     "    - Kaggle: 143.91026\n",
     "\n",
     "### SVR\n",
-    "- without preprocessing\n",
+    "- without scaling\n",
     "- with all samples\n",
     "    - few minutes\n",
     "    - C: 1.0, kernel: linear, epsilon: 0.30000000000000004, gamma: auto \n",
     "    - RMSE: 147.88896\n",
     "    - Kaggle: 152.19112\n",
+    "    \n",
+    "    \n",
     "- with preprocessing\n",
     "- with all samples: \n",
     "    - few minutes   \n",
