--- a/student_performance_kaggle.ipynb
+++ b/student_performance_kaggle.ipynb
@@ -88,6 +88,14 @@
     "    - Kaggle: 4.39525\n",
     "    \n",
     "    \n",
+    "- more models, more time\n",
+    "    - max_models=60, max_runtime=7200\n",
+    "    - 2108 s\n",
+    "    - GBM_1_AutoML_20190106_211629\n",
+    "    - RMSE: 3.62069\n",
+    "    - Kaggle: 4.39525\n",
+    "    \n",
+    "    \n",
     "- with preprocessing\n",
     "- with all samples\n",
     "    - few minutes (max 600 s)\n",
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -308,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -324,7 +332,7 @@
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O cluster uptime:</td>\n",
-       "<td>1 hour 36 mins</td></tr>\n",
+       "<td>7 hours 40 mins</td></tr>\n",
        "<tr><td>H2O cluster timezone:</td>\n",
        "<td>Europe/Vienna</td></tr>\n",
        "<tr><td>H2O data parsing timezone:</td>\n",
@@ -338,7 +346,7 @@
        "<tr><td>H2O cluster total nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O cluster free memory:</td>\n",
-       "<td>3.198 Gb</td></tr>\n",
+       "<td>2.248 Gb</td></tr>\n",
        "<tr><td>H2O cluster total cores:</td>\n",
        "<td>8</td></tr>\n",
        "<tr><td>H2O cluster allowed cores:</td>\n",
@@ -358,14 +366,14 @@
       ],
       "text/plain": [
        "--------------------------  ----------------------------------------\n",
-       "H2O cluster uptime:         1 hour 36 mins\n",
+       "H2O cluster uptime:         7 hours 40 mins\n",
        "H2O cluster timezone:       Europe/Vienna\n",
        "H2O data parsing timezone:  UTC\n",
        "H2O cluster version:        3.22.1.1\n",
        "H2O cluster version age:    9 days\n",
        "H2O cluster name:           H2O_from_python_Moritz_rnh332\n",
        "H2O cluster total nodes:    1\n",
-       "H2O cluster free memory:    3.198 Gb\n",
+       "H2O cluster free memory:    2.248 Gb\n",
        "H2O cluster total cores:    8\n",
        "H2O cluster allowed cores:  4\n",
        "H2O cluster status:         locked, healthy\n",
@@ -386,13 +394,14 @@
      "text": [
       "Parse progress: |█████████████████████████████████████████████████████████| 100%\n",
       "Parse progress: |█████████████████████████████████████████████████████████| 100%\n",
-      "AutoML progress: |████████████████████████████████████████████████████████| 100%\n"
+      "AutoML progress: |████████████████████████████████████████████████████████| 100%\n",
+      "AutoML training performed in 2108.1329061985016 s.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'AUTOML Leaderboard'"
+       "'AutoML Leaderboard'"
       ]
      },
      "metadata": {},
@@ -406,16 +415,16 @@
        "<tr><th>model_id                                           </th><th style=\"text-align: right;\">  mean_residual_deviance</th><th style=\"text-align: right;\">   rmse</th><th style=\"text-align: right;\">    mse</th><th style=\"text-align: right;\">    mae</th><th style=\"text-align: right;\">     rmsle</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "<tr><td>GBM_1_AutoML_20190106_151220                       </td><td style=\"text-align: right;\">                 13.1094</td><td style=\"text-align: right;\">3.62069</td><td style=\"text-align: right;\">13.1094</td><td style=\"text-align: right;\">2.8155 </td><td style=\"text-align: right;\">  0.649204</td></tr>\n",
-       "<tr><td>XGBoost_grid_1_AutoML_20190106_151220_model_10     </td><td style=\"text-align: right;\">                 13.2591</td><td style=\"text-align: right;\">3.64131</td><td style=\"text-align: right;\">13.2591</td><td style=\"text-align: right;\">2.82833</td><td style=\"text-align: right;\">  0.738679</td></tr>\n",
-       "<tr><td>XGBoost_grid_1_AutoML_20190106_151220_model_6      </td><td style=\"text-align: right;\">                 13.3325</td><td style=\"text-align: right;\">3.65137</td><td style=\"text-align: right;\">13.3325</td><td style=\"text-align: right;\">2.86096</td><td style=\"text-align: right;\">  0.68653 </td></tr>\n",
-       "<tr><td>XGBoost_1_AutoML_20190106_151220                   </td><td style=\"text-align: right;\">                 13.423 </td><td style=\"text-align: right;\">3.66374</td><td style=\"text-align: right;\">13.423 </td><td style=\"text-align: right;\">2.79087</td><td style=\"text-align: right;\">nan       </td></tr>\n",
-       "<tr><td>StackedEnsemble_BestOfFamily_AutoML_20190106_151220</td><td style=\"text-align: right;\">                 13.557 </td><td style=\"text-align: right;\">3.68199</td><td style=\"text-align: right;\">13.557 </td><td style=\"text-align: right;\">2.845  </td><td style=\"text-align: right;\">nan       </td></tr>\n",
-       "<tr><td>XGBoost_grid_1_AutoML_20190106_151220_model_2      </td><td style=\"text-align: right;\">                 13.5839</td><td style=\"text-align: right;\">3.68564</td><td style=\"text-align: right;\">13.5839</td><td style=\"text-align: right;\">2.87786</td><td style=\"text-align: right;\">  0.677353</td></tr>\n",
-       "<tr><td>GBM_grid_1_AutoML_20190106_151220_model_4          </td><td style=\"text-align: right;\">                 13.7119</td><td style=\"text-align: right;\">3.70296</td><td style=\"text-align: right;\">13.7119</td><td style=\"text-align: right;\">2.85752</td><td style=\"text-align: right;\">  0.71097 </td></tr>\n",
-       "<tr><td>StackedEnsemble_AllModels_AutoML_20190106_151220   </td><td style=\"text-align: right;\">                 13.8403</td><td style=\"text-align: right;\">3.72025</td><td style=\"text-align: right;\">13.8403</td><td style=\"text-align: right;\">2.86891</td><td style=\"text-align: right;\">  0.728458</td></tr>\n",
-       "<tr><td>XGBoost_grid_1_AutoML_20190106_151220_model_9      </td><td style=\"text-align: right;\">                 13.8476</td><td style=\"text-align: right;\">3.72124</td><td style=\"text-align: right;\">13.8476</td><td style=\"text-align: right;\">2.82065</td><td style=\"text-align: right;\">  0.68809 </td></tr>\n",
-       "<tr><td>XGBoost_grid_1_AutoML_20190106_151220_model_1      </td><td style=\"text-align: right;\">                 13.9719</td><td style=\"text-align: right;\">3.7379 </td><td style=\"text-align: right;\">13.9719</td><td style=\"text-align: right;\">2.87665</td><td style=\"text-align: right;\">  0.768168</td></tr>\n",
+       "<tr><td>GBM_1_AutoML_20190106_211629                       </td><td style=\"text-align: right;\">                 13.1094</td><td style=\"text-align: right;\">3.62069</td><td style=\"text-align: right;\">13.1094</td><td style=\"text-align: right;\">2.8155 </td><td style=\"text-align: right;\">  0.649204</td></tr>\n",
+       "<tr><td>XGBoost_grid_1_AutoML_20190106_211629_model_6      </td><td style=\"text-align: right;\">                 13.2591</td><td style=\"text-align: right;\">3.64131</td><td style=\"text-align: right;\">13.2591</td><td style=\"text-align: right;\">2.82833</td><td style=\"text-align: right;\">  0.738679</td></tr>\n",
+       "<tr><td>XGBoost_1_AutoML_20190106_211629                   </td><td style=\"text-align: right;\">                 13.423 </td><td style=\"text-align: right;\">3.66374</td><td style=\"text-align: right;\">13.423 </td><td style=\"text-align: right;\">2.79087</td><td style=\"text-align: right;\">nan       </td></tr>\n",
+       "<tr><td>XGBoost_grid_1_AutoML_20190106_211629_model_15     </td><td style=\"text-align: right;\">                 13.435 </td><td style=\"text-align: right;\">3.66537</td><td style=\"text-align: right;\">13.435 </td><td style=\"text-align: right;\">2.88957</td><td style=\"text-align: right;\">  0.689862</td></tr>\n",
+       "<tr><td>StackedEnsemble_BestOfFamily_AutoML_20190106_211629</td><td style=\"text-align: right;\">                 13.4503</td><td style=\"text-align: right;\">3.66746</td><td style=\"text-align: right;\">13.4503</td><td style=\"text-align: right;\">2.8267 </td><td style=\"text-align: right;\">nan       </td></tr>\n",
+       "<tr><td>XGBoost_grid_1_AutoML_20190106_211629_model_14     </td><td style=\"text-align: right;\">                 13.5741</td><td style=\"text-align: right;\">3.6843 </td><td style=\"text-align: right;\">13.5741</td><td style=\"text-align: right;\">2.8659 </td><td style=\"text-align: right;\">nan       </td></tr>\n",
+       "<tr><td>XGBoost_grid_1_AutoML_20190106_211629_model_13     </td><td style=\"text-align: right;\">                 13.5962</td><td style=\"text-align: right;\">3.68731</td><td style=\"text-align: right;\">13.5962</td><td style=\"text-align: right;\">2.82454</td><td style=\"text-align: right;\">  0.627185</td></tr>\n",
+       "<tr><td>StackedEnsemble_AllModels_AutoML_20190106_211629   </td><td style=\"text-align: right;\">                 13.6686</td><td style=\"text-align: right;\">3.69711</td><td style=\"text-align: right;\">13.6686</td><td style=\"text-align: right;\">2.82826</td><td style=\"text-align: right;\">  0.730744</td></tr>\n",
+       "<tr><td>XGBoost_grid_1_AutoML_20190106_211629_model_5      </td><td style=\"text-align: right;\">                 13.8476</td><td style=\"text-align: right;\">3.72124</td><td style=\"text-align: right;\">13.8476</td><td style=\"text-align: right;\">2.82065</td><td style=\"text-align: right;\">  0.68809 </td></tr>\n",
+       "<tr><td>GBM_4_AutoML_20190106_211629                       </td><td style=\"text-align: right;\">                 14.1335</td><td style=\"text-align: right;\">3.75946</td><td style=\"text-align: right;\">14.1335</td><td style=\"text-align: right;\">2.93219</td><td style=\"text-align: right;\">  0.709803</td></tr>\n",
        "</tbody>\n",
        "</table>"
       ]
@@ -449,12 +458,12 @@
     "\n",
     "y_name = 'Grade'\n",
     "aml = run_autoML_moritz(train, y_name, X_test2, y_test2, \n",
-    "                        max_models=30, max_runtime=600)"
+    "                        max_models=60, max_runtime=7200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +473,7 @@
       "Model Details\n",
       "=============\n",
       "H2OGradientBoostingEstimator :  Gradient Boosting Machine\n",
-      "Model Key:  GBM_1_AutoML_20190106_151220\n",
+      "Model Key:  GBM_1_AutoML_20190106_211629\n",
       "\n",
       "\n",
       "ModelMetricsRegression: gbm\n",
@@ -588,64 +597,64 @@
        "<td><b>training_mae</b></td>\n",
        "<td><b>training_deviance</b></td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
        "<td> 0.247 sec</td>\n",
        "<td>0.0</td>\n",
        "<td>4.5098099</td>\n",
        "<td>3.3380205</td>\n",
        "<td>20.3383857</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
        "<td> 0.254 sec</td>\n",
        "<td>5.0</td>\n",
        "<td>3.2972115</td>\n",
        "<td>2.4351116</td>\n",
        "<td>10.8716038</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
        "<td> 0.260 sec</td>\n",
        "<td>10.0</td>\n",
        "<td>2.4488150</td>\n",
        "<td>1.8365814</td>\n",
        "<td>5.9966947</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
-       "<td> 0.266 sec</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
+       "<td> 0.267 sec</td>\n",
        "<td>15.0</td>\n",
        "<td>1.8991992</td>\n",
        "<td>1.4378336</td>\n",
        "<td>3.6069576</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
-       "<td> 0.272 sec</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
+       "<td> 0.273 sec</td>\n",
        "<td>20.0</td>\n",
        "<td>1.4244858</td>\n",
        "<td>1.0656341</td>\n",
        "<td>2.0291598</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
        "<td> 0.278 sec</td>\n",
        "<td>25.0</td>\n",
        "<td>1.1230544</td>\n",
        "<td>0.8385357</td>\n",
        "<td>1.2612512</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
-       "<td> 0.291 sec</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
+       "<td> 0.298 sec</td>\n",
        "<td>30.0</td>\n",
        "<td>0.8724866</td>\n",
        "<td>0.6554668</td>\n",
        "<td>0.7612329</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
-       "<td> 0.296 sec</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
+       "<td> 0.303 sec</td>\n",
        "<td>35.0</td>\n",
        "<td>0.7426656</td>\n",
        "<td>0.5568892</td>\n",
        "<td>0.5515522</td></tr>\n",
        "<tr><td></td>\n",
-       "<td>2019-01-06 15:12:26</td>\n",
-       "<td> 0.299 sec</td>\n",
+       "<td>2019-01-06 21:16:35</td>\n",
+       "<td> 0.306 sec</td>\n",
        "<td>37.0</td>\n",
        "<td>0.6699446</td>\n",
        "<td>0.5051496</td>\n",
@@ -654,15 +663,15 @@
       "text/plain": [
        "    timestamp            duration    number_of_trees    training_rmse    training_mae    training_deviance\n",
        "--  -------------------  ----------  -----------------  ---------------  --------------  -------------------\n",
-       "    2019-01-06 15:12:26  0.247 sec   0                  4.50981          3.33802         20.3384\n",
-       "    2019-01-06 15:12:26  0.254 sec   5                  3.29721          2.43511         10.8716\n",
-       "    2019-01-06 15:12:26  0.260 sec   10                 2.44881          1.83658         5.99669\n",
-       "    2019-01-06 15:12:26  0.266 sec   15                 1.8992           1.43783         3.60696\n",
-       "    2019-01-06 15:12:26  0.272 sec   20                 1.42449          1.06563         2.02916\n",
-       "    2019-01-06 15:12:26  0.278 sec   25                 1.12305          0.838536        1.26125\n",
-       "    2019-01-06 15:12:26  0.291 sec   30                 0.872487         0.655467        0.761233\n",
-       "    2019-01-06 15:12:26  0.296 sec   35                 0.742666         0.556889        0.551552\n",
-       "    2019-01-06 15:12:26  0.299 sec   37                 0.669945         0.50515         0.448826"
+       "    2019-01-06 21:16:35  0.247 sec   0                  4.50981          3.33802         20.3384\n",
+       "    2019-01-06 21:16:35  0.254 sec   5                  3.29721          2.43511         10.8716\n",
+       "    2019-01-06 21:16:35  0.260 sec   10                 2.44881          1.83658         5.99669\n",
+       "    2019-01-06 21:16:35  0.267 sec   15                 1.8992           1.43783         3.60696\n",
+       "    2019-01-06 21:16:35  0.273 sec   20                 1.42449          1.06563         2.02916\n",
+       "    2019-01-06 21:16:35  0.278 sec   25                 1.12305          0.838536        1.26125\n",
+       "    2019-01-06 21:16:35  0.298 sec   30                 0.872487         0.655467        0.761233\n",
+       "    2019-01-06 21:16:35  0.303 sec   35                 0.742666         0.556889        0.551552\n",
+       "    2019-01-06 21:16:35  0.306 sec   37                 0.669945         0.50515         0.448826"
       ]
      },
      "metadata": {},
@@ -762,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +780,7 @@
      "text": [
       "Parse progress: |█████████████████████████████████████████████████████████| 100%\n",
       "gbm prediction progress: |████████████████████████████████████████████████| 100%\n",
-      "Saved as autoML_2019-01-06 15:34:05.143657.csv\n"
+      "Saved as autoML_2019-01-06 21:53:51.664177.csv\n"
      ]
     }
    ],
