exec, added results

--- a/student_performance_kaggle.ipynb
+++ b/student_performance_kaggle.ipynb
@@ -66,9 +66,9 @@
     "    \n",
     "- with preprocessing\n",
     "- with all samples:\n",
-    "    - few minutes\n",
+    "    - 85 s\n",
     "    - {'max_depth': 5, 'min_samples_split': 5, 'n_estimators': 150}\n",
-    "    - RMSE: 3.8868\n",
+    "    - RMSE: 3.8867\n",
     "    - Kaggle: __4.24893__\n",
     "    \n",
     "### AutoML\n",
@@ -106,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARN: OMP_NUM_THREADS=None =>\n",
+      "... If you are using openblas if you are using openblas set OMP_NUM_THREADS=1 or risk subprocess calls hanging indefinitely\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sklearn as sk\n",
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -145,11 +154,11 @@
     "test.set_index(['_index', 'id'], inplace=True)\n",
     "\n",
     "# scale train and test data\n",
-    "#train_s, test_s = scale_data(train, test)\n",
+    "train_s, test_s = scale_data(train, test)\n",
     "\n",
     "# concat train and test data for futher preprocessing\n",
-    "#data_s = pd.concat([train_s, test_s])\n",
-    "data_s = pd.concat([train, test])\n",
+    "data_s = pd.concat([train_s, test_s])\n",
+    "#data_s = pd.concat([train, test])\n",
     "\n",
     "# one hot encode data\n",
     "data_oh = one_hot(data_s, drop_first=True)\n",
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -270,11 +279,11 @@
      "text": [
       "GridSearch initializing...\n",
       "GradientBoostedRegressor model in training...\n",
-      "GradientBoostedRegressor model selected and fitted in 91.043 s\n",
+      "GradientBoostedRegressor model selected and fitted in 85.129 s\n",
       "\n",
-      "MSE: 15.06155, RMSE: 3.88092\n",
+      "MSE: 15.10604, RMSE: 3.88665\n",
       "Best parameters selected by GridSearch: {'max_depth': 5, 'min_samples_split': 5, 'n_estimators': 150}\n",
-      "Saved as gbdtree_ne-150_md-5_mss-5_2019-01-05 13:16:29.721969.csv\n"
+      "Saved as gbdtree_ne-150_md-5_mss-5_2019-01-07 14:53:21.136680.csv\n"
      ]
     }
    ],
